# api/src/app/app.service.ts
@@ -1,8 +1,12 @@
 import { Injectable } from '@nestjs/common';
+import { AppLoginDto } from './app.dto';
 
 @Injectable()
 export class AppService {
   getHello() {
     return { message: 'Hello World!' };
+  }
+  login(param: AppLoginDto) {
+    console.log(param);
   }
 }
